--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,8 +15,6 @@ jobs:
     steps:
       - run: >
           curl -X POST https://api.wiseoldman.net/v2/competitions/${{ matrix.competitionId }}/update-all 
-            -H "Content-type: application/json" 
-            -d '{
-                "verificationCode": "${{ secrets.CODE }}"
-            }'
+          -H "Content-type: application/json" 
+          -d '{ "verificationCode": "${{ secrets.CODE }}" }'
         
