--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,15 +2,15 @@ name: Update all competitions
 
 on:
   workflow_dispatch:
-  #schedule:
-  #  - cron: '0 * * * *'
+  schedule:
+    - cron: '0 * * * *'
 
 jobs:
   update_competition:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        competitionId: [ 24795, 24796, 24797, 24798, 24799, 24800, 24801 ]
+        competitionId: [ 25465, 25464, 25463, 25462, 25461 ]
     steps:
       - run: >
           curl -X POST https://api.wiseoldman.net/v2/competitions/${{ matrix.competitionId }}/update-all 
